--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,14 @@ html {
     width: 375px;
     height: 60px;
     padding: 10px;
-    background-color: rgb(250, 89, 196);
+    background-color: rgb(237, 11, 158);
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    gap: 10px;
+    top: 0px;
+    z-index: 99999999;
+    border-radius: 2px;
   }
   .icons{
       display: flex;     
@@ -34,10 +39,7 @@ html {
   }
   .logos1{
       display: flex;
-  }
-  img{
-      width: 50px;
-      height: 50px;
+      gap: 15px;
   }
   .history{
       width: 375px;
@@ -45,6 +47,88 @@ html {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-      background-color: rgb(175, 230, 212);
+      background-color: rgb(245, 237, 242);
+      z-index: 1;
+      border-radius: 3px;
   }
+  .his1,
+  .his2,
+  .his3{
+      width: 70px;
+      height: 70px;
+      border: 2px solid rgb(246, 58, 58);
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .inta3{
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+  }
+  .photo1{
+    width: 375px;
+    height: 390px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgb(236, 189, 180);
+    border-radius: 4px;
+  }
+  .headphoto{
+    width: auto;
+    height: 60px;
+    border: 1px solid rgb(233, 225, 225);
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 16px;
+    padding: 10px;
+  }
+  .profileName{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 2px solid red;
+  }
+  .devphoto{
+    width: 374px;
+    height: 280px;
+  }
+
+  .likes{
+    display: flex;
+    width: 375px;
+    height: auto;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .comments{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    align-items: center;
+    padding: 10px;
+  }
+  .bookmarks{
+    padding: 10px;
+    gap: 10px;
+  }
+
+  .foo{
+    width: 375px;
+    height: 40px;
+    background-color: rgb(255, 9, 161);
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    padding: 10px;
+    gap: 10px;
+    position: sticky;
+    bottom: 0px;
+    border-radius: 3px;
+  }
+
+
+
 
